--- a/social/templates/ajax/created_post.html
+++ b/social/templates/ajax/created_post.html
@@ -1,3 +1,4 @@
+{% load custom_filters %}
 {% load static %}
 
 <div class="central-meta item">
@@ -94,7 +95,7 @@
                                 </h5>
                                 <p>{{ comment.content }}</p>
                                 <div class="inline-itms">
-                                    <span>{{ comment.created_at }}</span>
+                                    <span>{{ comment.created_at|timesince_filter }} ago</span>
 
                                 </div>
                             </div>
@@ -114,7 +115,8 @@
                                 <textarea
                                         name="content"
                                         placeholder="Post your comment"></textarea>
-                                
+
+
                                 <button type="submit" style="color: black">Add</button>
                             </form>
                         </div>
@@ -122,6 +124,7 @@
                 </ul>
             </div>
         </div>
+
     </div>
 </div>
 
