--- a/social/templates/partial/user-profile.html
+++ b/social/templates/partial/user-profile.html
@@ -9,7 +9,9 @@
         </div>
         <img src="{{ user.profile.background_image.url }}" alt="" style="max-height: 400px">
         <ul class="profile-controls">
-            <li><a href="#" title="Add friend" class="send-friend-request-btn" data-user-id="{{ user.id }}" data-toggle="tooltip"><i class="fa fa-user-plus"></i></a></li>
+            {% if add_friend %}
+            	<li><a href="#" title="Add friend" class="send-friend-request-btn" data-user-id="{{ user.id }}" data-toggle="tooltip"><i class="fa fa-user-plus"></i></a></li>
+            {% endif %}
             <li><a href="#" title="Follow" data-toggle="tooltip"><i class="fa fa-star"></i></a></li>
             <li><a class="send-mesg" href="#" title="Send Message" data-toggle="tooltip"><i
                     class="fa fa-comment"></i></a></li>
@@ -44,7 +46,7 @@
                     </div>
 
                     <div class="author-content">
-                        <a class="h4 author-name" href="about.html">Jack Carter</a>
+                        <a class="h4 author-name" href="about.html">{{ user.first_name }} {{ user.last_name }}</a>
                         <div class="country">Ontario, CA</div>
                     </div>
                 </div>
