--- a/social/templates/social/base.html
+++ b/social/templates/social/base.html
@@ -1,3 +1,4 @@
+{% load custom_filters %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -13,7 +14,7 @@
         {% endblock %}
     </title>
     <link rel="icon" href="{% static 'images/fav.png' %}" type="image/png" sizes="16x16">
-
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/weather-icons.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/toast-notification.css' %}">
@@ -22,7 +23,6 @@
     <link rel="stylesheet" href="{% static 'css/color.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 
-    {#    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">#}
 
 </head>
 <body>
@@ -660,22 +660,66 @@
 
 {% endblock %}
 
+<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/main.min.js' %}"></script>
 <script src="{% static 'js/jquery-stories.js' %}"></script>
-{#	<script src="{% static 'js/toast-notificatons.js' %}"></script>#}
+<script src="{% static 'js/toast-notificatons.js' %}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script><!-- For timeline slide show -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8c55_YHLvDHGACkQscgbGLtLRdxBDCfI"></script>
 <!-- for location picker map -->
-<script src="{% static 'js/locationpicker.jquery.js' %}"></script><!-- for loaction picker map -->
+{#<script src="{% static 'js/locationpicker.jquery.js' %}"></script><!-- for loaction picker map -->#}
 <script src="{% static 'js/map-init.js' %}"></script><!-- map initilasition -->
 {#	<script src="{% static 'js/page-tourintro.js' %}"></script>#}
 {#	<script src="{% static 'js/page-tour-init.js' %}"></script>#}
 <script src="{% static 'js/script.js' %}"></script>
 <script>
-        window.csrftoken = '{{ csrf_token }}';
-    </script>
+    window.csrftoken = '{{ csrf_token }}';
+</script>
 <script src="{% static 'js/my.js' %}"></script>
-{#    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>#}
+<!-- notification and message -->
+<script>
+    const notification_count = document.getElementsByClassName('bg-purple')[0]
+    const message_count = document.getElementsByClassName('bg-blue')[0]
+
+</script>
+
+<!-- realtime notification -->
+<script>
+    const socket = new WebSocket('ws://localhost:8000/notifications/');
+
+
+    socket.onmessage = function (event) {
+        const data = JSON.parse(event.data);
+        console.log(data)
+        $.toast({
+            heading: 'Notification',
+            text: `${data.content}`,
+            icon: 'success',
+            position: 'top'
+        })
+        notification_count.innerHTML = parseInt(notification_count.innerHTML) + 1
+        let html = `<li>
+                        <a href="{% url 'user_notifications' request.user.id %}" title="">
+                            <figure>
+                                <img src="${data.avatar}" alt="">
+                                <span class="status f-online"></span>
+                            </figure>
+                            <div class="mesg-meta">
+                                <h6>${data.fullname}</h6>
+                                <span>${data.content}</span>
+                                <i>0 min ago</i>
+                            </div>
+                        </a>
+                    </li>`
+        $('#ul-notification').prepend(html)
+    };
+
+    socket.onclose = function (event) {
+        console.log('WebSocket connection closed.');
+    };
+
+</script>
+
 
 {% block scripts %}
 
