--- a/social/templates/social/chat-messenger.html
+++ b/social/templates/social/chat-messenger.html
@@ -19,7 +19,7 @@
                                     <div class="col-lg-12">
                                         <div class="mesg-area-head">
                                             <div class="active-user">
-                                                <figure><img src="images/resources/friend-avatar3.jpg" alt="">
+                                                <figure><img src="{{ target_user.profile.avatar.url }}" alt="">
                                                     <span class="status f-online"></span>
                                                 </figure>
                                                 <div>
