--- a/social/templates/ajax/get_post.html
+++ b/social/templates/ajax/get_post.html
@@ -11,19 +11,14 @@
                     <div class="more">
                         <div class="more-post-optns"><i class="ti-more-alt"></i>
                             <ul>
-                                <li><i class="fa fa-pencil-square-o"></i>Edit Post</li>
-                                <li><i class="fa fa-trash-o"></i>Delete Post</li>
-                                <li class="bad-report"><i class="fa fa-flag"></i>Report
-                                    Post
-                                </li>
-                                <li><i class="fa fa-address-card-o"></i>Boost This Post
-                                </li>
-                                <li><i class="fa fa-clock-o"></i>Schedule Post</li>
-                                <li><i class="fa fa-wpexplorer"></i>Select as featured
-                                </li>
-                                <li><i class="fa fa-bell-slash-o"></i>Turn off
-                                    Notifications
-                                </li>
+                                {% if request.user == post.user %}
+                                    <li><i class="fa fa-pencil-square-o"></i><a href="{% url 'edit_post' post.id %}">Edit Post</a></li>
+                                    <li><i class="fa fa-trash-o"></i><a href="{% url 'delete_post' post.id %}">Delete post</a></li>
+                                {% else %}
+                                    <li class="bad-report"><i class="fa fa-flag"></i>Report Post </li>
+                                {% endif %}
+
+
                             </ul>
                         </div>
                     </div>
