--- a/social/templates/partial/header.html
+++ b/social/templates/partial/header.html
@@ -51,7 +51,7 @@
                     <ul class="drops-menu">
                         {% for room in rooms %}
                         	<li>
-                                <a class="show-mesg" href="#" title="">
+                                <a class="" href="{% url 'room' request.user.username room.target_user.username %}" title="">
                                     <figure>
                                         <img src="{{ room.target_user.profile.avatar.url }}" alt="">
                                         <span class="status f-online"></span>
@@ -90,7 +90,7 @@
                 </ul>
                 <span class="seting-title">User setting <a href="#" title="">see all</a></span>
                 <ul class="log-out">
-                    <li><a href="about.html" title=""><i class="ti-user"></i> view profile</a></li>
+                    <li><a href="{% url 'user_profile' request.user.id %}" title=""><i class="ti-user"></i> view profile</a></li>
                     <li><a href="setting.html" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
                     <li><a href="#" title=""><i class="ti-target"></i>activity log</a></li>
                     <li><a href="setting.html" title=""><i class="ti-settings"></i>account setting</a></li>
