--- a/social/templates/social/edit_post.html
+++ b/social/templates/social/edit_post.html
@@ -46,7 +46,7 @@
             <!-- Nút lưu và hủy -->
             <div class="text-center mt-4">
                 <button type="submit" class="btn btn-primary">Save Changes</button>
-                <a href="" class="btn btn-secondary">Cancel</a>
+                <a href="{% url 'index' %}" class="btn btn-secondary">Cancel</a>
             </div>
         </form>
     </div>
