--- a/social/templates/partial/header.html
+++ b/social/templates/partial/header.html
@@ -91,7 +91,7 @@
                 <span class="seting-title">User setting <a href="#" title="">see all</a></span>
                 <ul class="log-out">
                     <li><a href="{% url 'user_profile' request.user.id %}" title=""><i class="ti-user"></i> view profile</a></li>
-                    <li><a href="setting.html" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
+                    <li><a href="{% url 'edit-profile' %}" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
                     <li><a href="#" title=""><i class="ti-target"></i>activity log</a></li>
                     <li><a href="setting.html" title=""><i class="ti-settings"></i>account setting</a></li>
                     <li><a href="{% url 'user_logout' %}" title=""><i class="ti-power-off"></i>log out</a></li>
