--- a/social/templates/partial/user-profile.html
+++ b/social/templates/partial/user-profile.html
@@ -10,7 +10,8 @@
         <img src="{{ user.profile.background_image.url }}" alt="" style="max-height: 400px">
         <ul class="profile-controls">
             {% if add_friend %}
-            	<li><a href="#" title="Add friend" class="send-friend-request-btn" data-user-id="{{ user.id }}" data-toggle="tooltip"><i class="fa fa-user-plus"></i></a></li>
+                <li><a href="#" title="Add friend" class="send-friend-request-btn" data-user-id="{{ user.id }}"
+                       data-toggle="tooltip"><i class="fa fa-user-plus"></i></a></li>
             {% endif %}
             <li><a href="#" title="Follow" data-toggle="tooltip"><i class="fa fa-star"></i></a></li>
             <li><a class="send-mesg" href="#" title="Send Message" data-toggle="tooltip"><i
@@ -54,10 +55,10 @@
             <div class="col-lg-10 col-md-9">
                 <ul class="profile-menu">
                     <li>
-                        <a class="" href="timeline.html">Timeline</a>
+                        <a class="{% if profile %}active{% endif %}" href="{% url 'user_profile' user.id %}">About</a>
                     </li>
                     <li>
-                        <a class="{% if profile %}active{% endif %}" href="{% url 'user_profile' user.id %}">About</a>
+                        <a class="{% if timeline %}active{% endif %}" href="{% url 'user_timeline' user.id %}">Timeline</a>
                     </li>
                     <li>
                         <a class="{% if friend_page %}active{% endif %}" href="{% url 'friend_timeline' user.id %}">Friends</a>
