--- a/social/templates/partial/header.html
+++ b/social/templates/partial/header.html
@@ -92,7 +92,9 @@
                 <ul class="log-out">
                     <li><a href="{% url 'user_profile' request.user.id %}" title=""><i class="ti-user"></i> view profile</a></li>
                     <li><a href="{% url 'edit-profile' %}" title=""><i class="ti-pencil-alt"></i>edit profile</a></li>
-                    <li><a href="#" title=""><i class="ti-target"></i>activity log</a></li>
+                    {% if request.user.is_staff %}
+                    	<li><a href="{% url 'report_list' %}" title=""><i class="ti-target"></i>Reports ports</a></li>
+                    {% endif %}
                     <li><a href="setting.html" title=""><i class="ti-settings"></i>account setting</a></li>
                     <li><a href="{% url 'user_logout' %}" title=""><i class="ti-power-off"></i>log out</a></li>
                 </ul>
