--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -24,7 +24,7 @@
         {% endif %}
         <button type="submit">sign in</button>
 
-        <a class="forgot underline" href="#" title="">forgot password?</a>
+        <a class="forgot underline" href="{% url 'forgot_password' %}" title="">forgot password?</a>
     </form>
 {% endblock %}
 
