--- a/social/templates/ajax/get_post.html
+++ b/social/templates/ajax/get_post.html
@@ -1,4 +1,6 @@
+{% load comment_tags %}
 {% load custom_filters %}
+{% load comment_filters %}
 {% load static %}
 {% for post in posts %}
     <div class="central-meta item">
@@ -12,10 +14,13 @@
                         <div class="more-post-optns"><i class="ti-more-alt"></i>
                             <ul>
                                 {% if request.user == post.user %}
-                                    <li><i class="fa fa-pencil-square-o"></i><a href="{% url 'edit_post' post.id %}">Edit Post</a></li>
-                                    <li><i class="fa fa-trash-o"></i><a href="{% url 'delete_post' post.id %}">Delete post</a></li>
+                                    <li><i class="fa fa-pencil-square-o"></i><a href="{% url 'edit_post' post.id %}">Edit
+                                        Post</a></li>
+                                    <li><i class="fa fa-trash-o"></i><a href="{% url 'delete_post' post.id %}">Delete
+                                        post</a></li>
                                 {% else %}
-                                    <li class="bad-report"><i class="fa fa-flag"></i><a href="{% url 'report_post' post.id %}">Report Post</a> </li>
+                                    <li class="bad-report"><i class="fa fa-flag"></i><a
+                                            href="{% url 'report_post' post.id %}">Report Post</a></li>
                                 {% endif %}
 
 
@@ -79,22 +84,8 @@
                 <div class="coment-area">
                     <ul class="we-comet">
 
-                        {% for comment in post.comments.all %}
-                            <li>
-                                <div class="comet-avatar">
-                                    <img src="{{ comment.user.profile.avatar.url }}"
-                                         alt="">
-                                </div>
-                                <div class="we-comment">
-                                    <h5><a href="time-line.html" title="">{{ comment.user.username }}</a>
-                                    </h5>
-                                    <p>{{ comment.content }}</p>
-                                    <div class="inline-itms">
-                                        <span>{{ comment.created_at|timesince_filter }} ago</span>
-
-                                    </div>
-                                </div>
-                            </li>
+                        {% for comment in post.comments.all|root_comments %}
+                            {% show_comment comment %}
                         {% endfor %}
 
                         <li class="post-comment">
