--- a/social/templates/ajax/created_post.html
+++ b/social/templates/ajax/created_post.html
@@ -1,128 +1,117 @@
+{% load comment_tags %}
+{% load comment_filters %}
 {% load custom_filters %}
 {% load static %}
 
 <div class="central-meta item">
-    <div class="user-post">
-        <div class="friend-info">
-            <figure>
-                <img src="{{ post.user.profile.avatar.url }}" alt="">
-            </figure>
-            <div class="friend-name">
-                <div class="more">
-                    <div class="more-post-optns"><i class="ti-more-alt"></i>
-                        <ul>
-                            {% if request.user == post.user %}
-                                <li><i class="fa fa-pencil-square-o"></i><a href="{% url 'edit_post' post.id %}">Edit
-                                    Post</a></li>
-                                <li><i class="fa fa-trash-o"></i>Delete Post</li>
-                            {% else %}
-                                <li class="bad-report"><i class="fa fa-flag"></i>Report Post</li>
-                            {% endif %}
-
-
-                        </ul>
-                    </div>
-                </div>
-                <ins><a href="{% url 'user_profile' post.user.id %}" title="">{{ post.user.username }}</a>
-                </ins>
-                <span><i class="fa fa-globe"></i> published: {{ post.created_at }} </span>
-            </div>
-            <div class="post-meta">
-                <p>
-                    {{ post.content }}
-                </p>
+        <div class="user-post">
+            <div class="friend-info">
                 <figure>
-                    <div class="img-bunch">
-                        <div class="row">
-                            {% if post.images %}
-                                <div class="col">
-                                    <figure>
-                                        <a href="#" title="" data-toggle="modal"
-                                           data-target="#img-comt" class="post-image" data-images='[
+                    <img src="{{ post.user.profile.avatar.url }}" alt="">
+                </figure>
+                <div class="friend-name">
+                    <div class="more">
+                        <div class="more-post-optns"><i class="ti-more-alt"></i>
+                            <ul>
+                                {% if request.user == post.user %}
+                                    <li><i class="fa fa-pencil-square-o"></i><a href="{% url 'edit_post' post.id %}">Edit
+                                        Post</a></li>
+                                    <li><i class="fa fa-trash-o"></i><a href="{% url 'delete_post' post.id %}">Delete
+                                        post</a></li>
+                                {% else %}
+                                    <li class="bad-report"><i class="fa fa-flag"></i><a
+                                            href="{% url 'report_post' post.id %}">Report Post</a></li>
+                                {% endif %}
+
+
+                            </ul>
+                        </div>
+                    </div>
+                    <ins><a href="{% url 'user_profile' post.user.id %}" title="">{{ post.user.username }}</a>
+                    </ins>
+                    <span><i class="fa fa-globe"></i> published: {{ post.created_at }} </span>
+                </div>
+                <div class="post-meta">
+                    <p>
+                        {{ post.content }}
+                    </p>
+                    <figure>
+                        <div class="img-bunch">
+                            <div class="row">
+                                {% if post.images %}
+                                    <div class="col">
+                                        <figure>
+                                            <a href="#" title="" data-toggle="modal"
+                                               data-target="#img-comt" class="post-image" data-images='[
                                                     {% for image in post.images.all %}
                                                         "{{ image.image.url }}"{% if not forloop.last %}, {% endif %}
                                                     {% endfor %}
                                                 ]'>
-                                            <img src="{{ post.images.all.0.image.url }}"
-                                                 alt="">
-                                        </a>
-                                    </figure>
+                                                <img src="{{ post.images.all.0.image.url }}"
+                                                     alt="">
+                                            </a>
+                                        </figure>
 
-                                </div>
-                            {% endif %}
-                        </div>
-                    </div>
-
-                </figure>
-                <div class="we-video-info">
-                    <ul>
-
-                        <li>
-                            <div class="likes heart {% if post.id in liked_posts_ids %}happy{% endif %}"
-                                 title="Like/Dislike" data-post-id="{{ post.id }}">
-                                ❤ <span class="like-count">{{ post.likes.count }}</span>
+                                    </div>
+                                {% endif %}
                             </div>
-                        </li>
-                        <li>
+                        </div>
+
+                    </figure>
+                    <div class="we-video-info">
+                        <ul>
+
+                            <li>
+                                <div class="likes heart {% if post.id in liked_posts_ids %}happy{% endif %}"
+                                     title="Like/Dislike" data-post-id="{{ post.id }}">
+                                    ❤ <span class="like-count">{{ post.likes.count }}</span>
+                                </div>
+                            </li>
+                            <li>
                             <span class="comment" title="Comments">
                                 <i class="fa fa-commenting"></i>
                                 <ins>{{ post.comments.count }}</ins>
                             </span>
-                        </li>
+                            </li>
 
-                        <li>
+                            <li>
 
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
 
+                    </div>
                 </div>
-            </div>
-            <div class="coment-area">
-                <ul class="we-comet">
+                <div class="coment-area">
+                    <ul class="we-comet">
 
-                    {% for comment in post.comments.all %}
-                        <li>
+                        {% for comment in post.comments.all|root_comments %}
+                            {% show_comment comment %}
+                        {% endfor %}
+
+                        <li class="post-comment">
                             <div class="comet-avatar">
-                                <img src="{{ comment.user.profile.avatar.url }}"
+                                <img src="{{ user.profile.avatar.url }}"
                                      alt="">
                             </div>
-                            <div class="we-comment">
-                                <h5><a href="time-line.html" title="">{{ comment.user.username }}</a>
-                                </h5>
-                                <p>{{ comment.content }}</p>
-                                <div class="inline-itms">
-                                    <span>{{ comment.created_at|timesince_filter }} ago</span>
+                            <div class="post-comt-box">
+                                <form class="comment-form" method="POST">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="post_id" value="{{ post.id }}">
+                                    <input type="hidden" name="user_id" value="{{ user.id }}">
+                                    <textarea
+                                            name="content"
+                                            placeholder="Post your comment"></textarea>
 
-                                </div>
+
+                                    <button type="submit" style="color: black">Add</button>
+                                </form>
                             </div>
                         </li>
-                    {% endfor %}
-
-                    <li class="post-comment">
-                        <div class="comet-avatar">
-                            <img src="{{ user.profile.avatar.url }}"
-                                 alt="">
-                        </div>
-                        <div class="post-comt-box">
-                            <form class="comment-form" method="POST">
-                                {% csrf_token %}
-                                <input type="hidden" name="post_id" value="{{ post.id }}">
-                                <input type="hidden" name="user_id" value="{{ user.id }}">
-                                <textarea
-                                        name="content"
-                                        placeholder="Post your comment"></textarea>
-
-
-                                <button type="submit" style="color: black">Add</button>
-                            </form>
-                        </div>
-                    </li>
-                </ul>
+                    </ul>
+                </div>
             </div>
+
         </div>
-
     </div>
-</div>
-
 
 
