--- a/social/templates/comments/comment_recursive.html
+++ b/social/templates/comments/comment_recursive.html
@@ -5,10 +5,11 @@
         <img src="{{ comment.user.profile.avatar.url }}" alt="">
     </div>
     <div class="we-comment">
-        <h5><a href="{% url 'user_profile' comment.user.id %}" title="">{{ comment.user.username }}</a></h5>
+        <h5><a href="time-line.html" title="">{{ comment.user.username }}</a></h5>
         <p>{{ comment.content }}</p>
         <div class="inline-itms">
             <span>{{ comment.created_at|timesince_filter }} ago</span>
+            <a href="#" class="reply-btn" data-comment-id="{{ comment.id }}">Reply</a>
         </div>
     </div>
 
@@ -19,4 +20,15 @@
             {% endfor %}
         </ul>
     {% endif %}
+
+    <!-- Form reply ẩn -->
+    <div class="reply-form-container" style="display: none;">
+        <form class="reply-form" method="POST">
+            {% csrf_token %}
+            <input type="hidden" name="post_id" value="{{ comment.post.id }}">
+            <input type="hidden" name="parent_id" value="{{ comment.id }}">
+            <textarea name="content" placeholder="Write a reply..."></textarea>
+            <button type="submit" style="color: black">Reply</button>
+        </form>
+    </div>
 </li>
