--- a/social/templates/social/detail_report_post.html
+++ b/social/templates/social/detail_report_post.html
@@ -38,7 +38,7 @@
         <div class="text-center my-4">
 
             <a href="{% url 'index' %}" class="btn btn-primary">Cancel</a>
-            <a href="" class="btn btn-danger">Block post</a>
+            <a href="{% url 'resolve_the_report' report.id %}" class="btn btn-danger">Block post</a>
         </div>
 
     </div>
