--- a/social/templates/social/report-list.html
+++ b/social/templates/social/report-list.html
@@ -11,9 +11,16 @@
         <center class="mt-5"><h1>Report list</h1></center>
         <ul>
             {% for report in reports %}
-                <li>
-                    <a href="{% url 'report_post_detail' report.id %}">{{ report }}</a>
-                </li>
+                {% if report.is_resolve %}
+                    <li>
+                        <a class="text-success" href="{% url 'report_post_detail' report.id %}">{{ report }}</a>
+                    </li>
+                {% else %}
+                    <li>
+                        <a class="text-danger" href="{% url 'report_post_detail' report.id %}">{{ report }}</a>
+                    </li>
+                {% endif %}
+
             {% endfor %}
 
         </ul>
